--- a/jane.css
+++ b/jane.css
@@ -149,7 +149,21 @@ margin-left: -17px;
     font-size: 16px;
     padding: 10px 18px;
     background-color: rgba(220,220,220,0.7);
+    color: #000;
   }
+}
+@media (max-width:300px){
+  .button1 {
+    font-size: 16px;
+    padding: 10px 18px;
+    background-color: rgba(220,220,220,0.7);
+    color: #000;
+  }
+  .button2{
+  padding: 10px;
+  margin-top: 33px;
+  width: 80px;
+}
 }
 .main-content{
   max-width: 1200px;   
